--- a/_graph_templates/Makefile
+++ b/_graph_templates/Makefile
@@ -1,3 +1,16 @@
+SRCDIR=.
+BUILDDIR=../graph_templates
 
-#xmllint -format -xinclude %b
+SRC=$(wildcard $(SRCDIR)/*.xml)
+BUILD=$(SRC:$(SRCDIR)/%.xml=$(BUILDDIR)/%.xml)
 
+all: templates
+
+templates: $(BUILD)
+
+$(BUILDDIR)/%.xml: $(SRCDIR)/%.xml
+	xmllint -format -xinclude -o $@ $<
+
+.PHONY: clean
+clean:
+	-rm $(BUILD)
